version-1.0.1/README.md
# Data Analytics App v1.0.1

## Version Overview

This is version 1.0.1 of the Data Analytics Application. This version includes core features for data visualization, analysis, and reporting with improvements over the initial release.

## Version History

### v1.0.1 (Current)
- **Core Features**
  - User authentication and authorization
  - Dashboard with interactive charts
  - Data upload functionality
  - Report generation and download
  - Topic-based data filtering
  - API and Website data connectors
  - Data processing pipeline
  - Project management
  - User profile and settings
  
- **UI Components**
  - Modern responsive design
  - Interactive data visualizations
  - Real-time data filtering
  - Download functionality with multiple formats

### v1.0.0
- Initial release with core analytics features

## Installation

### Prerequisites
- Node.js 18.x or higher
- npm 9.x or higher
- Angular CLI 19.x

### Install Dependencies

```bash
cd version-1.0.1
npm install
```

### Development Server

Run the development server:

```bash
npm start
```

Navigate to `http://localhost:4200/`. The application will automatically reload if you change any source files.

### Build

Run the build command:

```bash
npm run build
```

The build artifacts will be stored in the `dist/` directory.

### Production Build

```bash
npm run build -- --configuration production
```

## Features

### Authentication
- Login/Register functionality
- Protected routes with AuthGuard
- Session management using localStorage

### Dashboard
- Interactive charts using Chart.js
- Real-time data updates
- Multiple chart types (bar, line, pie, etc.)

### Data Management
- CSV file upload
- API data connectors
- Website data scraping
- Data filtering and processing

### Reporting
- Generate detailed reports
- Export to multiple formats (PDF, CSV, etc.)
- Version history tracking

### Projects
- Create and manage projects
- Project-based data organization
- Collaborative features

## Tech Stack

- **Frontend**: Angular 19 (Standalone Components)
- **Charts**: Chart.js 4.x with ng2-charts
- **PDF Generation**: jsPDF
- **Styling**: CSS with modern design patterns
- **State Management**: RxJS BehaviorSubject
- **Storage**: LocalStorage for persistence

## Project Structure

```
src/
├── app/
│   ├── auth/              # Authentication components
│   ├── dashboard/         # Main dashboard
│   ├── data-filter/       # Data filtering
│   ├── data-processing/  # Data processing
│   ├── api-connector/     # API connections
│   ├── website-connector/# Website scraping
│   ├── upload/           # File upload
│   ├── report/           # Report generation
│   ├── download/         # Download functionality
│   ├── projects/        # Project management
│   ├── topics/           # Topic management
│   ├── profile/          # User profile
│   ├── settings/         # App settings
│   ├── services/         # Angular services
│   └── ...
├── assets/               # Static assets
└── environments/         # Environment configs
```

## Configuration

### Environment Variables

Edit `src/environments/environment.ts` for development:

```typescript
export const environment = {
  production: false,
  apiUrl: 'http://localhost:3000/api',
  // Add more environment-specific variables
};
```

## Running Tests

```bash
npm test
```

For watch mode:

```bash
npm run test:watch
```

## Performance Notes

This version is optimized for:
- Initial load performance
- Lazy loading for feature modules
- Efficient change detection
- Optimized chart rendering

## Troubleshooting

### Common Issues

1. **Node modules not installed**: Run `npm install` again
2. **Port already in use**: Use `ng serve --port 4201`
3. **Build errors**: Clear cache with `npm run build -- --force`

### Getting Help

For issues and questions, please check the documentation or contact the development team.

## License

Proprietary - All rights reserved
